--- a/MongoBookStoreApp.Web/ClientApp/src/app/modules/books/addoredit/addoredit.component.html
+++ b/MongoBookStoreApp.Web/ClientApp/src/app/modules/books/addoredit/addoredit.component.html
@@ -1,4 +1,7 @@
 <form [formGroup]="form">
+    <div *ngIf="isErrorResponse" class="alert alert-danger" role="alert">
+        {{error}}
+    </div>
     <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" formControlName="name" />
@@ -8,8 +11,8 @@
         <textarea type="text" class="form-control" formControlName="description"></textarea>
     </div>
     <div class="form-group">
-        <label for="isdn">ISDN</label>
-        <input type="text" class="form-control" formControlName="isdn" />
+        <label for="isbn">ISBN</label>
+        <input type="text" class="form-control" formControlName="isbn" />
     </div>
     <div class="form-group">
         <label for="price">Price</label>
