--- a/MongoBookStoreApp.Web/ClientApp/src/app/modules/books/list/list.component.html
+++ b/MongoBookStoreApp.Web/ClientApp/src/app/modules/books/list/list.component.html
@@ -4,7 +4,7 @@
         <tr>
             <th>#</th>
             <th>Name</th>
-            <th>ISDN</th>
+            <th>ISBN</th>
             <th>Author Name</th>
             <th>Added On</th>
             <th></th>
@@ -14,7 +14,7 @@
         <tr *ngFor="let book of books;">
             <td><a [routerLink]="['edit', book.id]">{{book.id}}</a></td>
             <td>{{book.name}}</td>
-            <td>{{book.isdn}}</td>
+            <td>{{book.isbn}}</td>
             <td>{{book.authorName}}</td>
             <td>{{book.addedOn | date:'dd/MM/yyyy'}}</td>
             <td><a style="cursor: pointer;" class="text-danger" (click)="delete(book.id)">delete</a></td>
